most images from back-end removed; either replaced by icons or nothing

--- a/Site/etc/adm/config.ini
+++ b/Site/etc/adm/config.ini
@@ -3,9 +3,9 @@
 ; @author
 ; Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 ; Email: sobi[at]sigsiu.net
-; Url: http://www.Sigsiu.NET
+; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2016 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
 ; See http://www.gnu.org/licenses/gpl.html and https://www.sigsiu.net/licenses.
@@ -44,8 +44,6 @@ disable = "[cfg:img_folder_live]/adm/legacy/window-close.png"
 approve = "[cfg:img_folder_live]/adm/legacy/preflight-verifier.png"
 unapprove = "[cfg:img_folder_live]/adm/legacy/window-close.png"
 order = "[cfg:img_folder_live]/adm/legacy/document-save-all.png"
-category_edit = "[cfg:img_folder_live]/adm/legacy/configure.png"
-category_goin = "[cfg:img_folder_live]/adm/legacy/document-open-folder.png"
 position_down = "[cfg:img_folder_live]/adm/legacy/arrow-down.png"
 position_up = "[cfg:img_folder_live]/adm/legacy/arrow-up.png"
 expired = "[cfg:img_folder_live]/adm/legacy/expired.png"
@@ -56,17 +54,9 @@ field_required_1 = "[cfg:img_folder_live]/adm/legacy/checkbox.png"
 field_required_0 = "[cfg:img_folder_live]/adm/legacy/window-close.png"
 field_editable_1 = "[cfg:img_folder_live]/adm/legacy/news-subscribe.png"
 field_editable_0 = "[cfg:img_folder_live]/adm/legacy/news-unsubscribe.png"
-extensions_enabled_1 = "[cfg:img_folder_live]/adm/legacy/checkbox.png"
-extensions_enabled_0 = "[cfg:img_folder_live]/adm/legacy/window-close.png"
-extensions_locked = "[cfg:img_folder_live]/adm/legacy/document-encrypt.png"
 ok = "[cfg:img_folder_live]/adm/legacy/flag-green.png"
 wrong = "[cfg:img_folder_live]/adm/legacy/flag-red.png"
 warn = "[cfg:img_folder_live]/adm/legacy/flag-yellow.png"
-err_err = "[cfg:img_folder_live]/adm/legacy/error.png"
-err_warn = "[cfg:img_folder_live]/adm/legacy/warning.png"
-err_notice = "[cfg:img_folder_live]/adm/legacy/notice.png"
-err_details = "[cfg:img_folder_live]/adm/legacy/help.png"
-filter_edit = "[cfg:img_folder_live]/adm/legacy/edit-filter.png"
 
 [string]
 path_separator = " >> "
