media folder for internal use only; category images in images/sobipro folder (mediaimages)

--- a/Site/etc/config.ini
+++ b/Site/etc/config.ini
@@ -63,9 +63,6 @@ db_format = "Y-m-d H:i:s"
 [mail_protection]
 show = 80
 
-[jquery]
-ui_theme = "smoothness.smoothness"
-
 [cache]
 js_compress_exceptions = "jquery.js,mootools.js"
 include_files = true
@@ -74,8 +71,8 @@ unique_search_url = false
 
 
 [images]
-category_icons = "[cfg:images_folder]/images/"
-category_icons_live = "[cfg:img_folder_live]/images/"
+category_icons = "[cfg:mediaimages_folder]/categories/"
+category_icons_live = "[cfg:mediaimages_folder_live]/categories/"
 folder_ico = "[cfg:img_folder_live]/adm/folder-category.png"
 
 [image_field]
