(!) Category images now located in /images instead /media folder

--- a/Site/etc/config.ini
+++ b/Site/etc/config.ini
@@ -71,9 +71,9 @@ unique_search_url = false
 
 
 [images]
-category_icons = "[cfg:mediaimages_folder]/categories/"
-category_icons_live = "[cfg:mediaimages_folder_live]/categories/"
-folder_ico = "[cfg:img_folder_live]/adm/folder-category.png"
+category_icons = "[cfg:images_folder]/categories/"
+category_icons_live = "[cfg:images_folder_live]/categories/"
+folder_ico = "[cfg:media_folder_live]/adm/folder-category.png"
 
 [image_field]
 pass_exif = false
