--- a/Site/etc/paypal.ini
+++ b/Site/etc/paypal.ini
@@ -19,7 +19,7 @@
 ; $HeadURL$
 
 [general]
-image="{cfg:img_folder_live}/adm/apps/paypal/paypal.png"
+image="{cfg:media_folder_live}/adm/apps/paypal/paypal.png"
 replace=","
 
 [fields]
