icon instead image used for folder in category image chooser

--- a/Site/etc/adm/config.ini
+++ b/Site/etc/adm/config.ini
@@ -47,3 +47,4 @@ global_types_array = "field|acl|global_application|language|module"
 
 [image]
 ico_size="100:100"
+folder_symbol="icon-folder-close"
