(!) Configuration ini files cleaned up

--- a/Site/etc/adm/config.ini
+++ b/Site/etc/adm/config.ini
@@ -12,6 +12,8 @@
 
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
+; Definition of the settings which should be set or overriden for the administrator area.
+
 [editing]
 def_cout_time = 3600
 
