--- a/Site/etc/config.ini
+++ b/Site/etc/config.ini
@@ -5,74 +5,70 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2016 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
-; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
+; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
+; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
 ; See http://www.gnu.org/licenses/gpl.html and https://www.sigsiu.net/licenses.
 
-; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-[general]
-top_menu = true
-debug = false
-
-[entry]
-primary_path_always = false
-name_field = 0
-maxCats = 5
-publish_limit = 0
-field_description = false
-approve_all_langs = true
-versioning = true
-versioningAdminBehaviour = true
-
-[icon-fonts]
-font-awesome-3="//maxcdn.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css"
-font-awesome-4="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-font-google-materials="//fonts.googleapis.com/icon?family=Material+Icons"
-
-[template]
-bs3_css="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-bs3_js="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
 
 [lang]
-engb_preload = true
 ignore_default = false
 
 [section]
 force_category_id = false;
 
-[plugins]
-content_disable = "json://['entry.payment', 'entry.submit']"
+[entry]
+primary_path_always = false
+field_description = false
 
 [editing]
 def_cout_time = 3600
 
 [html]
-tooltip_class = "editlinktip hasTip"
 editor = "cms.html.editor"
 pre_to_entities = true
+
+[category]
+field_description = false
+
+[search]
+suggest_start_with = true
+suggest_min_chars = 3
+suggest_split_words = true
+
+result_limit = 1000
+show_phrase = true
+form_searchphrase_def = "all"
+word_filter = "/\p{L}+|\d+|%/iu"
+params_to_pass = "json://['rendercomponent','tmpl']"
+
+[template]
+bs3_css="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+bs3_js="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+
+[plugins]
+content_disable = "json://['entry.payment', 'entry.submit']"
 
 [date]
 ;publishing_format = "Y-m-d H:i:s"
 publishing_format = "j F Y H:i:s"
-
 log_format = "D M j G:i:s T Y"
-db_format = "Y-m-d H:i:s"
-
-[mail_protection]
-show = 80
 
 [cache]
 js_compress_exceptions = "jquery.js,mootools.js"
-include_files = true
-xml_enabled = true
 unique_search_url = false
-
 
 [images]
 category_icons = "[cfg:images_folder]/categories/"
 category_icons_live = "[cfg:images_folder_live]/categories/"
+
+[image]
+ico_size = "100:100"
+jpeg_quality = 100
 
 [image_field]
 pass_exif = false
@@ -84,73 +80,9 @@ fix_rotation = true
 [browser]
 add_title = true
 reverse_title = false
-title_separator = ' - '
-
-[search]
-; word_filter = "/\p{L}+|\d+|%/iu"
-suggest_start_with = true
-suggest_min_chars = 1
-params_to_pass = "json://['rendercomponent','tmpl']"
-result_limit = 1000
+title_separator = " - "
+url_filter = "/[^A-Za-z0-9\p{L}\-\_]/iu"
 
 [meta]
 desc_append = true
 keys_append = true
-
-[category]
-show_intro = true
-show_icon = true
-parse_desc = false
-show_desc = false
-
-[list]
-cat_desc = false
-cat_meta = false
-subcats = true
-entry_meta = false
-entry_cats = true
-categories_ordering = "name.desc"
-categories_in_line = 2
-entries_in_line = 1
-entries_limit = 8
-num_subcats = 6
-field_description = false
-
-[alphamenu]
-letters = "A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z,0-9"
-verify = false
-show = true
-field_types = "json://['inbox','select','chbxgroup','multiselect']"
-
-[redirects]
-section_enabled = false
-section_url = "index.php"
-section_msgtype = "info"
-section_msg = "UNAUTHORIZED_ACCESS"
-section_search_enabled = false
-section_search_url = "index.php"
-section_search_msgtype = "info"
-section_search_msg = "UNAUTHORIZED_ACCESS"
-category_enabled = false
-category_url = "index.php"
-category_msgtype = "info"
-category_msg = "UNAUTHORIZED_ACCESS"
-entry_access_enabled = false
-entry_access_url = "index.php"
-entry_access_msgtype = "info"
-entry_access_msg = "UNAUTHORIZED_ACCESS"
-entry_add_enabled = false
-entry_add_url = "index.php"
-entry_add_msgtype = "info"
-entry_add_msg = "UNAUTHORIZED_ACCESS"
-entry_save_enabled = false
-entry_save_url = "index.php"
-entry_save_msgtype = "info"
-entry_save_msg = "EN.ENTRY_SAVED_NA"
-
-[legacy]
-maxCats = 5
-sigsiutree = false
-
-[image]
-ico_size="100:100"
