(+) Autosuggest function extended to general search field

--- a/Site/usr/templates/b3-default3/search/search.ini
+++ b/Site/usr/templates/b3-default3/search/search.ini
@@ -17,7 +17,7 @@
 
 [general]
 template_type = "xslt"
-js_files = "alpha,navigation,search"
+js_files = "alpha,navigation,bootstrap.b3typeahead,autosuggest,search"
 
 [form]
 action = "index.php"
