compression comments shortened

--- a/Site/etc/config.ini
+++ b/Site/etc/config.ini
@@ -36,7 +36,7 @@ pre_to_entities = true
 field_description = false
 
 [search]
-suggest_start_with = true
+suggest_start_with = false
 suggest_min_chars = 3
 suggest_split_words = true
 
