no 'show in admin list' for category fields

--- a/Site/etc/config.ini
+++ b/Site/etc/config.ini
@@ -58,6 +58,9 @@ content_disable = "json://['entry.payment', 'entry.submit']"
 publishing_format = "j F Y H:i:s"
 log_format = "D M j G:i:s T Y"
 
+[calendar]
+showzerodate = false
+
 [cache]
 js_compress_exceptions = "jquery.js,mootools.js"
 unique_search_url = false
