--- a/Site/usr/templates/b3-default3/entry/edit.ini
+++ b/Site/usr/templates/b3-default3/entry/edit.ini
@@ -17,7 +17,7 @@
 
 [general]
 template_type = "xslt"
-js_files = "edit,bootstrap.tooltips,bootstrap.popover,bootstrap.b3typeahead"
+js_files = "edit,bootstrap.tooltips,bootstrap.popover,bootstrap.b3typeahead,form"
 
 [form]
 action = "index.php"
