(!) default.less/default.css renamed to custom.less/custom.css

--- a/Site/usr/templates/b3-default3/config.ini
+++ b/Site/usr/templates/b3-default3/config.ini
@@ -17,6 +17,6 @@
 
 [general]
 template_type = "xslt"
-css_files = "theme,default"
+css_files = "theme,custom"
 js_files = "alpha,bootstrap.b3typeahead,autosuggest,navigation"
 functions="template.php"
