(#) RSS News work again / 1.4.0.G

--- a/Site/etc/base.ini
+++ b/Site/etc/base.ini
@@ -52,7 +52,7 @@ num_subcats = 6
 name_field = 0
 ;maxCats = 5
 publish_limit = 0
-approve_all_langs = true
+;approve_all_langs = true
 versioning = true
 versioningAdminBehaviour = true
 
