--- a/Site/etc/config.ini
+++ b/Site/etc/config.ini
@@ -66,7 +66,7 @@ js_compress_exceptions = "jquery.js,mootools.js"
 unique_search_url = false
 
 [images]
-category_icons = "[cfg:images_folder]/categories/"
+category_icons = "[cfg:images_folder]categories/"
 category_icons_live = "[cfg:images_folder_live]/categories/"
 
 [image]
