topmenu hidden on mobile by default

--- a/Site/usr/templates/default4/config.json
+++ b/Site/usr/templates/default4/config.json
@@ -37,6 +37,7 @@
     "hidesearch": "0",
     "noimage": "1",
     "countentries": "0",
+    "showicon": "1",
     "entries_recursive": "1"
   },
   "theme": {
