template design defaults to standard

--- a/Site/usr/templates/default4/config.json
+++ b/Site/usr/templates/default4/config.json
@@ -1,6 +1,7 @@
 {
   "less": {
     "theme": {
+      "design": "standard",
       "colour-set": "sobipro",
       "back-color": "#FFFFFF",
       "font-color": "#3E3E3E",
