(!) User interface of Paypal payment application improved

--- a/Site/etc/paypal.ini
+++ b/Site/etc/paypal.ini
@@ -5,7 +5,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -16,6 +16,7 @@
 
 [general]
 image="{cfg:media_folder_live}/adm/apps/paypal/paypal.png"
+image_localized="https://www.paypalobjects.com/{pplang}/i/btn/btn_buynow_LG.gif"
 replace=","
 
 [fields]
@@ -24,13 +25,14 @@ business 		= "{ppemail}"
 item_name 		= "{subject}"
 item_number 	= "{entry.id}"
 no_shipping 	= "1"
-return 			= "{pprurl}"
-no_note 		= "1"
 currency_code 	= "{ppcc}"
 tax 			= "0"
-bn 				= "{subject}"
+bn 				= "{ppbn}"
 charset 		= "UTF-8"
 amount 			= "{amount}"
+lc				= "{pplc}"
+return 			= "{pprurl}"
+cancel_return	= "{ppcancel}"
 
 [message]
 url 			= "https://www.paypal.com/cgi-bin/webscr?"
@@ -38,9 +40,9 @@ cmd				= "_xclick"
 business		= "{ppemail}"
 item_name		= "{subject}"
 item_number		= "{entry.id}"
-amount			= "{amount}"
-no_shipping		= 2
-no_note			= 1
+no_shipping		= "1"
 currency_code	= "{ppcc}"
-bn				= "PP-BuyNowBF"
+tax 			= "0"
+bn				= "{ppbn}"
 charset			= "utf-8"
+amount			= "{amount}"
