--- a/Site/usr/templates/default4/config.json
+++ b/Site/usr/templates/default4/config.json
@@ -35,6 +35,7 @@
     "categories_ordering": "name.asc",
     "module_eil": "1",
     "bs": "bs3",
+    "version": "4.1",
     "hidesearch": "0",
     "noimage": "1",
     "countentries": "0",
@@ -47,6 +48,7 @@
       "basetext-color": "#FFFFFF",
       "active-color": "#000066",
       "activetext-color": "#FFFFFF",
+      "link-color": "#000066",
       "alert-color": "#E7E7E7",
       "important-color": "#FE4426",
       "background-light": "#FBEEEE",
