config settings [extensions]->check_updates and [api]->enabled moved to base.ini file

--- a/Site/etc/base.ini
+++ b/Site/etc/base.ini
@@ -98,3 +98,8 @@ include_js_files = false
 include_css_files = false
 xml_enabled = true
 
+[extensions]
+check_updates = true;
+
+[api]
+enabled = false
